# ameba-zephyr-pro2-platform

./: CMakeLists.txt  Kconfig  README.md
boards/realtek/rtl8735b_evb/: rtl8735b_evb.dts  rtl8735b_evb_defconfig
drivers/: CMakeLists.txt  Kconfig
drivers/adc/: CMakeLists.txt  Kconfig  Kconfig.amebapro2  adc_amebapro2.c
drivers/audio/: CMakeLists.txt  Kconfig  dmic_amebapro2.c
drivers/disk/: CMakeLists.txt  Kconfig  sdmmc_amebapro2.c
drivers/entropy/: CMakeLists.txt  Kconfig  entropy_amebapro2.c
drivers/flash/: CMakeLists.txt  Kconfig  flash_amebapro2.c
drivers/gpio/: CMakeLists.txt  Kconfig  gpio_amebapro2.c
drivers/i2c/: CMakeLists.txt  Kconfig  Kconfig.amebapro2  i2c_amebapro2.c
drivers/pinctrl/: CMakeLists.txt  Kconfig
drivers/pwm/: CMakeLists.txt  Kconfig  Kconfig.amebapro2  pwm_amebapro2.c
drivers/serial/: CMakeLists.txt  Kconfig  uart_amebapro2_loguart.c
drivers/spi/: CMakeLists.txt  Kconfig  Kconfig.amebapro2  spi_amebapro2.c
drivers/video/: CMakeLists.txt  Kconfig  video_amebapro2.c  video_amebapro2_controller.c
dts/arm/realtek/amebapro2/: amebapro2.dtsi
dts/bindings/adc/: realtek,amebapro2-adc.yaml
dts/bindings/pwm/: realtek,amebapro2-pwm.yaml
samples/adc/src/: main.c
samples/audio/src/: main.c
samples/gpio/src/: main.c
samples/pwm/src/: main.c
samples/sdcard/src/: main.c
samples/spi/src/: main.c
samples/video/src/: main.c
soc/realtek/ameba/amebad/: soc.c
soc/realtek/ameba/amebadplus/: soc.c
soc/realtek/ameba/amebapro2/: soc.c
zephyr/: module.yml
