# SPDX-License-Identifier: Apache-2.0

add_subdirectory(serial)
add_subdirectory(entropy)
add_subdirectory(pinctrl)
add_subdirectory(spi)
add_subdirectory(flash)
add_subdirectory(i2c)
add_subdirectory(gpio)
add_subdirectory(disk)
add_subdirectory(video)
add_subdirectory(audio)
add_subdirectory(pwm)
